# repair-company-db

./: README.md  analysis.md
app/: CMakeLists.txt  DB.cs  Form.Designer.cs  Form.cs  Program.cs
app/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
app/bin_16/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  RepairCompany.csproj  RepairCompany.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
app/bin_16/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
app/bin_16/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
explanatory-note/: explanatory-note.md
